Restructuring latex files

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 ## Special files
 stat154.pdf
 latex/project.pdf
+project.pdf
 startLatex/start.pdf
 The\ Elements\ of \Statistical\ Learning.pdf
+latex/project.tex
 
+latex/figures
 
 ## General
 *.swp
