--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,19 @@
 ## Special files
 stat154.pdf
 latex/project.pdf
-project.pdf
-startLatex/start.pdf
-The\ Elements\ of \Statistical\ Learning.pdf
 latex/project.tex
 latex/cache
 *Tmp*
+dataset/spamResults
+dataset/phonemeResults
+
 
 ## General
 *.swp
 *.dat
 ## Core latex/pdflatex auxiliary files:
 *.aux
+*.brf
 *.lof
 *.log
 *.lot
